# sfbrn-ati-web-pdf-conformance-scanner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: classification.yaml  ignore_profiles.yaml  settings.yaml
docs/: verify-improvements.md
skill/: SKILL.md
src/pdfscan/: __init__.py  __main__.py
src/pdfscan/classify/: __init__.py  apply.py  classifier.py  evaluate.py  profile.py
src/pdfscan/cli/: app.py  archive.py  crawl.py  db.py  evaluate.py  export.py  init.py  owner.py  people.py  person.py  run.py  session.py  setup.py  site.py  status.py  verify.py
src/pdfscan/config/: __init__.py  ignore_profiles.py  sessions.py  settings.py
src/pdfscan/db/: __init__.py  engine.py  migrations.py  schema.py
src/pdfscan/exporters/: __init__.py  base.py  csv_export.py  excel_export.py  html_export.py  json_export.py
src/pdfscan/mcp/: __init__.py  handlers.py  server.py
src/pdfscan/models/: __init__.py  failure.py  owner.py  pdf.py  report.py  site.py
src/pdfscan/pdf/: __init__.py  analyze.py  download.py  hashing.py  verapdf.py  verify.py
tests/: conftest.py
tests/unit/: test_analyze.py  test_archive.py  test_box_resolver.py  test_classification_profile.py  test_classify.py  test_evaluate.py  test_exporters.py  test_ignore_profiles.py  test_init.py  test_mcp_handlers.py  test_migrations.py  test_models.py  test_people_import.py  test_report_rules.py  test_repositories.py  test_service_facade.py  test_sessions.py  test_settings.py  test_status_table.py  test_storage.py  test_urls.py  test_verapdf_batch.py  test_verapdf_parse.py  test_verapdf_resolve.py  test_verify_helpers.py  test_verify_site.py
(+33 files in other folders)
